[package]
name = "api-bench"
version = "0.1.0"
edition = "2021"
authors = ["Owain Williams <owain@andersdigital.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
error-chain = "0.12.4"
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }
